src/tests/snapshots/niri__tests__window_opening__check_target_size@dwP0.25-dhF500-b.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    default-column-width { proportion 0.25; }\n    default-window-height { fixed 500; }\n    border { on; }\n}"
expression: snapshot
---
initial configure:
size: 292 × 500, bounds: 1240 × 680, states: []

post-map configures:
size: 292 × 500, bounds: 1240 × 680, states: [Activated]
